Minor Code changes